[package]
name = "example"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
time = "0.1"
gl = "0.6.1"
glutin = "0.7.0"

rng = {git = "https://github.com/nathanfaucett/rs-rng"}
pseudo_random = {git = "https://github.com/nathanfaucett/rs-pseudo_random"}

vector = {git = "https://github.com/nathanfaucett/rs-vector"}

gl_context = {git = "https://github.com/nathanfaucett/rs-gl_context"}

material = {git = "https://github.com/nathanfaucett/rs-material"}
shader = {git = "https://github.com/nathanfaucett/rs-shader"}

camera_components = {git = "https://github.com/nathanfaucett/rs-camera_components"}
transform_components = {git = "https://github.com/nathanfaucett/rs-transform_components"}

scene_renderer = {git = "https://github.com/nathanfaucett/rs-scene_renderer"}
scene_graph = {git = "https://github.com/nathanfaucett/rs-scene_graph"}

sprite_component = {git = "https://github.com/nathanfaucett/rs-sprite_component"}

gl_renderer_plugin = {git = "https://github.com/nathanfaucett/rs-gl_renderer_plugin"}

sprite_gl_renderer = {path = ".."}
